chore: Optimized string access without sun.misc.Unsafe for JDK 26+
Requires JVM flags though, falls back to non-optimized
Stays on Unsafe in JDK 25 and earlier